# tasktree-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json
src/: CMakeLists.txt  TaskTreeBackend.cpp  TaskTreeBackend.hpp  backend.cpp  backend.hpp  cli.cpp  main.cpp  main.qml  util.cpp  util.hpp
src/database/: CMakeLists.txt  unique-sqlite.cpp  unique-sqlite.hpp
src/tasktree/: CMakeLists.txt  task.cpp  task.hpp  tasktree.cpp  tasktree.hpp
src/ui/: CMakeLists.txt  Main.qml  Task.qml
test/: CMakeLists.txt  test.cpp
